[package]
name = "lynx-embedded"
version = "0.1.0"
authors = ["Cameron Kinsella <ckinsella@uwaterloo.ca>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
all = ["std", "nightly", "experimental", "embassy"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std", "embedded-svc/std"]
alloc = ["esp-idf-svc/alloc", "embedded-svc/alloc"]
nightly = ["esp-idf-svc/nightly", "embedded-svc/nightly"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47", default-features = false }
embedded-svc = { version = "0.26", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
toml-cfg = "0.1.3"
hyper = "0.14.27"
mime = "0.3.17"
encoding_rs = "0.8.33"
pn532 = { version = "0.3.2" }
embedded-hal = "1.0.0-rc.1"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
nb = "1.1.0"
void = "1.0.2"

[build-dependencies]
embuild = "0.31.4"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv" # Supports CSV and binary formats
